--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   },
   "private": true,
   "dependencies": {
+    "@amcharts/amcharts4": "^4.10.13",
+    "@amcharts/amcharts4-fonts": "^4.0.1",
+    "@amcharts/amcharts4-geodata": "^4.1.19",
     "@angular/animations": "~10.1.6",
     "@angular/common": "~10.1.6",
     "@angular/compiler": "~10.1.6",
     "@angular/core": "~10.1.6",
     "@angular/forms": "~10.1.6",
     "@angular/platform-browser": "~10.1.6",
-    "@angular/platform-browser-dynamic": "~10.1.6",
+    "@angular/platform-browser-dynamic": "^10.1.6",
     "@angular/router": "~10.1.6",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
